messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: green
    spec:
      containers:
        - name: django
          image: enos137/messaging-app:2.0
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
      app: django
      version: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
