messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
spec:
  replicas: 1
  selector:
    matchLabels: { app: messaging }
  template:
    metadata:
      labels: { app: messaging }
    spec:
      containers:
        - name: messaging-app
          image: enos137/messaging-app:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector: { app: messaging }
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
